# jindosh-riddle

./: Chapter3_BuildingFunctions2.hs  README.md  chapter4.hs  chapter5.hs  currying.hs  day-of-week.hs  eq.hs  fun.hs  hi.hs  jindosh.hs  jindosh.py  mood.hs  pipe.hs  print1.hs  print2.hs  print3.hs  reverse.hs  show.hs  topOrLocal.hs  trivial.hs  type-kwon-do.hs
elm/: Main.elm  elm-package.json
elm/src/: Constraint.elm  Display.elm  Main.elm  Person.elm  Solver.elm
elm/tests/: Tests.elm
haskell/: README.md  jindosh.cabal  jindosh.hs
haskell/app/: Main.hs
haskell/src/: Constraint.hs  Display.hs  Person.hs  Solver.hs
python/: jindosh.py
