name:                jindosh
version:             0.1.0.0
synopsis:            Solution to the Jindosh Riddle in Haskell
description:         Please see README.md
homepage:            https://github.com/toolness/jindosh-riddle#readme
license:             PublicDomain
license-file:        LICENSE
author:              Atul Varma
maintainer:          varmaa@gmail.com
copyright:           2016 Atul Varma
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Constraint
                     , Display
                     , Person
                     , Solver
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable jindosh-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , jindosh
  default-language:    Haskell2010

test-suite jindosh-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , jindosh
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/toolness/jindosh-riddle
